# npc-agent-backend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  docker-compose.redis.yml  docker-compose.yml  readme.md  requirements-ml.txt  requirements.txt
app/: main.py
app/agent/: prompts.py
app/agents/: __init__.py  quest_agent.py  world_agent.py
app/api/: chat.py  debug.py  knowledge.py  memory.py  quest.py  rag.py  story.py  world.py
app/core/: config.py  dependencies.py  exceptions.py  llm.py  logging.py  rate_limit.py
app/data/: seed.py
app/repositories/: player_state_repository.py  shared_knowledge_repository.py  story_repository.py
app/schemas/: chat.py  context.py  game.py  llm.py  memory.py  npc.py  quest.py  rag.py  reflection.py  shared_knowledge.py  story.py  tool.py  trace.py  validation.py  world.py
app/services/: chat_pipeline.py  chat_service.py  context_builder_service.py  conversation_summary_service.py  game_service.py  long_term_memory_service.py  memory_service.py  npc_service.py  rag_knowledge_service.py  redis_memory_service.py  reflection_service.py  reflection_worker.py  shared_knowledge_service.py  story_import_service.py  token_budget_service.py  tool_service.py  trace_service.py  world_action_service.py
clients/qt-debug-console/: .gitignore  CMakeLists.txt  README.md
clients/qt-debug-console/resources/: dark_theme.qss
clients/qt-debug-console/src/: main.cpp
clients/qt-debug-console/src/api/: ApiClient.cpp  ApiClient.h  SseEventParser.cpp  SseEventParser.h
clients/qt-debug-console/src/common/: JsonUtils.cpp  JsonUtils.h
clients/qt-debug-console/src/ui/: AsyncRequestTracker.cpp  AsyncRequestTracker.h  ClientCache.cpp  ClientCache.h  ClientSettings.cpp  ClientSettings.h  MainWindow.cpp  MainWindow.h  MainWindowActions.cpp  MainWindowRender.cpp  MainWindowRequestState.cpp  MainWindowUi.cpp
clients/qt-debug-console/src/ui/widgets/: MemoryCardDelegate.cpp  MemoryCardDelegate.h  TokenBudgetChart.cpp  TokenBudgetChart.h  TraceTimelineWidget.cpp  TraceTimelineWidget.h
clients/qt-debug-console/tests/: TestAsyncRequestTracker.cpp  TestClientCache.cpp  TestClientSettings.cpp  TestSseEventParser.cpp
docs/: ai_backend_improvement_plan.md  api_contract.md  go_python_backend_split_plan.md  go_python_gateway_notes.md  go_python_split_learning_guide.md
eval/: agent_cases.jsonl  eval_report.json  eval_report.md
scripts/: eval_agent_behavior.py  eval_memory_behavior.py  load_test_api.py  load_test_go_api.py
services/go-api/: Dockerfile  README.md  go.mod  go.sum
services/go-api/cmd/api/: main.go
services/go-api/internal/agentclient/: client.go  client_test.go
services/go-api/internal/config/: config.go  config_test.go
services/go-api/internal/http/: router.go  router_test.go
services/go-api/internal/http/handler/: health.go
services/go-api/internal/http/middleware/: access_log.go  metrics.go  rate_limit.go  rate_limit_test.go  (+3 more)
services/go-api/internal/metrics/: recorder.go
services/go-api/internal/ratelimit/: redis.go
tests/: test_chat_integration.py  test_chat_stream_api.py  test_context_builder_service.py  test_eval_agent_behavior.py  test_exception_handlers.py  test_load_test_api.py  test_memory_api.py  test_memory_service.py  test_phase3_agent_api.py  test_quest_agent.py  test_rag_api.py  test_rag_service.py  test_rate_limit.py  test_reflection_worker.py  test_shared_knowledge_service.py  test_story_api.py  test_story_import_service.py  test_token_budget_service.py  test_tool_service.py  test_trace_service.py  test_world_action_service.py  test_world_agent.py
(+1 files in other folders)
